Notas de estudio English 06072022 actualización archivo English.txt

--- a/css/style.css
+++ b/css/style.css
@@ -330,3 +330,12 @@ blockquote#cita-marco {
     border-color: inherit;
 }
 
+/* 
+https://autoprefixer.github.io/
+https://caniuse.com/
+Prefijos de los navegadores
+-webkit-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+*/
